fix #89: suppression no-wrap

--- a/core/admin/theme/theme.css
+++ b/core/admin/theme/theme.css
@@ -174,13 +174,13 @@ textarea {
 .scrollable-table .full-width th {
 	padding-top: .2rem;
 	padding-bottom: .2rem;
-	white-space: nowrap;
 }
 #articles-table td:nth-child(4),
 #comments-table td:nth-child(3),
 #medias-table td:nth-child(3),
 #plugins-table td:nth-child(3) {
 	width: 100%;
+	min-width: 200px;
 }
 #plugins-table img,
 #medias-table img {
